# git-metrics

./: .gitignore  README.md  build.py  core.py  main.py  plugin_interface.py  plugin_manager.py  pyproject.toml  requirements.txt  setup.py
metrics/: change_coupling.py  change_entropy.py  code_churn.py  developer_ownership.py  hotspot_analysis.py  knowledge_distribution.py
rust/: Cargo.toml
rust/src/: error.rs  git_collector.rs  lib.rs  models.rs
src/git_metrics/: cli.py
src/git_metrics/core/: __init__.py  analyzer.py  python_git.py
src/git_metrics/metrics/: __init__.py  change_coupling.py  change_entropy.py  code_churn.py  developer_ownership.py  hotspot_analysis.py  knowledge_distribution.py
src/git_metrics/plugins/: __init__.py  interface.py  manager.py
src/gitsect/: cli.py
src/gitsect/core/: __init__.py  analyzer.py  python_git.py
src/gitsect/metrics/: __init__.py  change_coupling.py  change_entropy.py  code_churn.py  developer_ownership.py  hotspot_analysis.py  knowledge_distribution.py
src/gitsect/plugins/: __init__.py  interface.py  manager.py
